--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px;
+  padding: 15px;
 }
 
 .screen-header__title {
@@ -14,5 +14,9 @@
 }
 
 .screen-header__icons {
+  position: relative;
+}
+
+.screen-header__icons span:nth-child(3) {
   position: relative;
 }
