--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--gray);
 }
 
 .user-component__avatar {
@@ -26,7 +26,7 @@
 .user-component__subtitle {
   margin-top: 8px;
   font-size: 17px;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--gray);
 }
 
 .user-component__avatar--xl {
@@ -41,6 +41,7 @@
   font-weight: 400;
   font-size: 20px;
 }
+
 .user-component__time {
   margin-bottom: 5px;
   display: block;
