--- a/css/variables.css
+++ b/css/variables.css
@@ -2,4 +2,5 @@
   --yellow: #ffe809; /* 카카오톡 BI 컬러를 설정에 추가 (중요: styels.css에 반드시 import) */
   --horizontal-space: 25px;
   --main-border: 1px solid rgba(0, 0, 0, 0.5);
+  --gray: rgba(0, 0, 0, 0.5);
 }
