--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap");
 @import "reset.css"; /* 뼈대를 보여주는 html보다 css에 추가하는 것이 적절*/
 @import "variables.css"; /* 메인 BI 컬러를 세부설정한 variables.css 불러오기 */
 /* Components*/
@@ -7,7 +7,7 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/icon-row.css";
-@import "components/alt-screen-header";
+@import "components/alt-screen-header.css";
 @import "components/badge.css";
 /* Screens */
 @import "screens/login.css";
@@ -15,10 +15,12 @@
 @import "screens/chats.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
 /* styles.css에는 웹페이지 전체에 일괄적으로 적용되는 속성은 그대로 표현*/
 body {
   color: #2e363e;
-  font-family: "Shadows Into Light", cursive;
+  font-family: "Dosis", sans-serif;
   font-weight: 700;
 }
 .main-screen {
