--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -19,6 +19,17 @@
   position: relative;
   /* notification의 'relatvie를 가진 가장 가까운 부모'로 변경 (or else <body> 전체가 기준이 됨)*/
 }
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(360deg);
+  }
+  100% {
+    transform: none;
+  }
+}
 
 .nav__notification {
   position: absolute;
@@ -26,4 +37,30 @@
   (그러므로 바로 위 nav__a를 relative를 가진 가장 가까운 부모로 만들어줌으로써 notification 오류 해결 */
   left: 12px;
   bottom: 12px;
+  animation: notificationAnimation 2s ease-in-out infinite;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+.nav__btn {
+  transform: translateY(60px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.5s;
+}
+.nav__btn:last-child {
+  animation-delay: 0.8s;
 }
