--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
   background-color: #abc1d1;
-  height: 1500vh;
+  height: 100vh;
   position: relative;
 }
 #chat-screen .alt-header,
@@ -18,11 +18,24 @@
   top: 10px;
   z-index: 1;
 }
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
 .main-chat {
   margin-top: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadeIn 0.3s linear;
 }
 .chat__timestamp {
   color: white;
@@ -96,7 +109,9 @@
   padding: 5px 25px;
   box-sizing: border-box;
   align-items: center;
+  transition: all 0.3s ease-in-out;
 }
+
 .reply i {
   opacity: 0.5;
 }
@@ -112,17 +127,23 @@
   width: 100%;
   border: var(--main-border);
   border-radius: 20px;
+  box-sizing: border-box;
+  transition: transform 0.3s ease-in-out;
 }
+.fa-face-smile-wink {
+  margin-right: 20px;
+}
+
 .reply__column:last-child > i,
 .reply__column:last-child button {
   position: absolute;
-  right: -16px;
-  top: 3px;
+  right: 6px;
+  top: 5px;
 }
 
 .reply .reply__column:last-child > i {
   right: 20px;
-  top: 17px;
+  top: 19px;
 }
 
 .reply__column button {
@@ -139,4 +160,20 @@
 
 .reply__column button i {
   opacity: 1;
+}
+
+/* focus-within : focus 내부에 focus된 element가 있는지 확인 */
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-face-smile-wink,
+.reply:focus-within button {
+  opacity: 0;
+}
+
+.reply:focus-within input {
+  width: 90vw;
+  transform: translateX(-10%) translateY(-50px);
+}
+
+.reply:focus-within {
+  transform: translateY(50px);
 }
