--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -86,3 +86,23 @@
 .open-post__heart-count span {
   margin-left: 3px;
 }
+
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(3);
+  }
+  100% {
+    color: white;
+  }
+}
+.open-post__heart-count:hover i {
+  will-change: transform;
+  /* will-change : 브라우저에게 '어떤 것이 변할 것인지' 알려줌
+                  브라우저가 컴퓨터의 그래픽카드를 이요하여 애니메이션 가속화 */
+  animation: heartBeat 1s linear infinite;
+}
