--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -23,6 +23,16 @@
   color: var(--gray);
 }
 
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 #splash-screen {
   background-color: var(--yellow);
   position: absolute; /* 모든 것의 위에 있음을 의미 */
@@ -33,4 +43,7 @@
   justify-content: center;
   align-items: center;
   font-size: 100px;
+  animation: hideSplashScreen 0.5s ease-in-out forwards;
+  /* forwards : 마지막 속성 값(opacity:0)이 애니메이션이 끝나고도 유지됨 */
+  animation-delay: 0.6s;
 }
