--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -3,7 +3,8 @@
   z-index: 99;
   height: 100vh;
   width: 100vw;
-  background-color: var(--yellow);
+  color: var(--pink-light);
+  background-color: black;
   display: flex;
   top: 0;
   justify-content: center;
