--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -10,6 +10,7 @@
   padding-top: 20px;
 }
 .more-suggestions__title {
+  animation: sparkle 2s linear infinite;
   margin-bottom: 30px;
 }
 .more-suggestions__icons {
