--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ body {
   color: #2e363e;
   font-family: "Dosis", sans-serif;
   font-weight: 700;
+  background-color: var(--pink-light);
 }
 .main-screen {
   padding: var(--horizontal-space);
