--- a/css/variables.css
+++ b/css/variables.css
@@ -3,4 +3,5 @@
   --horizontal-space: 25px;
   --main-border: 1px solid rgba(0, 0, 0, 0.5);
   --gray: rgba(0, 0, 0, 0.5);
+  --pink-light: rgb(255, 215, 235);
 }
